# SudokuGame

./: .gitignore  CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: Alert.cpp  Alert.h  Background.cpp  Background.h  BackgroundVisitor.cpp  BackgroundVisitor.h  CMakeLists.txt  ContainerVisitor.cpp  ContainerVisitor.h  Declaration.cpp  Declaration.h  DeclarationBackground.cpp  DeclarationBackground.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationDigit.cpp  DeclarationDigit.h  DeclarationGiven.cpp  DeclarationGiven.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationXray.cpp  DeclarationXray.h  Digit.cpp  Digit.h  DigitVisitor.cpp  DigitVisitor.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Given.cpp  Given.h  Item.cpp  Item.h  ItemContainer.cpp  ItemContainer.h  ItemDigit.cpp  ItemDigit.h  ItemGiven.cpp  (+30 more)
Tests/: CMakeLists.txt  ContainerTest.cpp  DigitTest.cpp  EmptyTest.cpp  GameTest.cpp  GivenTest.cpp  LoadTest.cpp  ScoreboardTest.cpp  SpartyTest.cpp  XrayTest.cpp  gtest_main.cpp
levels/: level3.xml
